--- a/papers/cppnow24/concept_maps.org
+++ b/papers/cppnow24/concept_maps.org
@@ -1,10 +1,13 @@
+#+BLOG: sdowney
+#+POSTID: 375
+#+DATE: [2024-05-19 Sun 11:51]
 #+OPTIONS: ':nil *:t -:t ::t <:t H:nil \n:nil ^:nil arch:headline author:nil
 #+OPTIONS: broken-links:nil c:nil creator:nil d:(not "LOGBOOK") date:nil e:t
 #+OPTIONS: email:nil f:t inline:t num:nil p:nil pri:nil prop:nil stat:t tags:t
 #+OPTIONS: tasks:t tex:t timestamp:nil title:t toc:nil todo:t |:t
-#+TITLE:
-#+AUTHOR:
-#+EMAIL:
+#+TITLE: Concept Maps using C++23 Library Tech
+#+AUTHOR: Steve Downey
+#+EMAIL: sdowney@sdowney.org
 #+LANGUAGE: en
 #+SELECT_TAGS: export
 #+EXCLUDE_TAGS: noexport
@@ -16,19 +19,13 @@
 #+KEYWORDS:
 #+SUBTITLE:
 #+LATEX_COMPILER: pdflatex
-#+DATE:
-#+STARTUP: showall
-#+OPTIONS: html-link-use-abs-url:nil html-postamble:nil html-preamble:tbla
-#+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
-#+HTML_DOCTYPE: xhtml-strict
-#+HTML_CONTAINER: div
 #+DESCRIPTION:
 #+KEYWORDS:
 #+HTML_LINK_HOME:
 #+HTML_LINK_UP:
 #+HTML_MATHJAX:
 #+HTML_HEAD:
-#+HTML_HEAD_EXTRA:
+#+HTML_HEAD_EXTRA:A
 #+SUBTITLE:
 #+INFOJS_OPT:
 #+OPTIONS: reveal_width:1600 reveal_height:900
@@ -48,12 +45,22 @@
 #+REVEAL_EXPORT_NOTES_TO_PDF: separate-page
 #+REVEAL_DEFAULT_FRAG_STYLE: (appear)
 
-* Concept Maps using C++23 Library Tech
-
-Steve Downey
-
-© 2024 Bloomberg Finance L.P. All rights reserved.
-
+#+OPTIONS: html-link-use-abs-url:nil html-postamble:auto html-preamble:t
+#+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
+#+HTML_DOCTYPE: xhtml-strict
+#+HTML_CONTAINER: div
+#+DESCRIPTION:
+#+KEYWORDS:
+#+HTML_LINK_HOME:
+#+HTML_LINK_UP:
+#+HTML_MATHJAX:
+#+html_head: <link rel="stylesheet" type="text/css" href="http://sdowney.org/css/modus-operandi-tinted.css" />
+#+HTML_HEAD_EXTRA:
+#+SUBTITLE:
+#+INFOJS_OPT:
+#+LATEX_HEADER:
+#+BABEL: :results output graphics :tangle yes
+#+STARTUP: showeverything
 
 
 * Abstract
